# shyless

./: Cargo.toml
migrations/: V1__init_up.sql
src/: main.rs
src/application/: app_state.rs  mod.rs
src/application/dto/: credentials.rs  mod.rs
src/application/services/: jwt_service.rs  mod.rs  post_service.rs
src/domain/interfaces/: auth_service.rs  mod.rs
src/domain/interfaces/infrastructure/: mod.rs  repository.rs  storage.rs  to_key.rs
src/domain/interfaces/post/: mod.rs  post_service.rs
src/domain/interfaces/user/: mod.rs  user_repository.rs
src/domain/models/: post.rs  user.rs
src/handlers/: auth.rs  mod.rs
src/handlers/middlewares/: mod.rs  verify_token.rs
src/handlers/posts/: create_post.rs  delete_post.rs  get_post.rs  like_post.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repository/: mod.rs  post_repository.rs  user_repository.rs
src/infrastructure/storage/: mod.rs  postgres.rs
